[#699] Fix drawer height on firefox

--- a/frontend/src/modules/stakeholder-overview/styles.scss
+++ b/frontend/src/modules/stakeholder-overview/styles.scss
@@ -676,8 +676,8 @@
       max-width: 500px;
       width: 100% !important;
       @-moz-document url-prefix() {
-        min-height: 944px !important;
-        transform: scale(0.7) translate(-107px, -205px);
+        min-height: 999px !important;
+        transform: scale(0.7) translate(-107px, -215px);
       }
 
       .ant-drawer-header {
